--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>e-tebeka | Premium Legal Research Portal</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon"
+        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚖️</text></svg>">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -89,7 +91,8 @@
                     <div>
                         <label style="display: block; font-size: 0.85rem; font-weight: 600; margin-bottom: 8px;">Court
                             Level</label>
-                        <select style="width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #CFD8DC;">
+                        <select id="courtFilter"
+                            style="width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #CFD8DC;">
                             <option>All Federal Courts</option>
                             <option>Federal Supreme Court</option>
                             <option>Federal High Court</option>
@@ -99,17 +102,19 @@
                     <div>
                         <label
                             style="display: block; font-size: 0.85rem; font-weight: 600; margin-bottom: 8px;">Bench</label>
-                        <select style="width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #CFD8DC;">
+                        <select id="benchFilter"
+                            style="width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #CFD8DC;">
                             <option>Select Bench</option>
                         </select>
                     </div>
                     <div>
                         <label style="display: block; font-size: 0.85rem; font-weight: 600; margin-bottom: 8px;">Search
                             Keywords</label>
-                        <input type="text" placeholder="Case #, Parties, or Summary..."
+                        <input type="text" id="searchInput" placeholder="Case #, Parties, or Summary..."
                             style="width: 100%; padding: 12px; border-radius: 8px; border: 1px solid #CFD8DC;">
                     </div>
-                    <button class="btn btn-primary" style="height: 46px; padding: 0 32px;">Search Records</button>
+                    <button onclick="handleSearch()" class="btn btn-primary"
+                        style="height: 46px; padding: 0 32px;">Search Records</button>
                 </div>
             </div>
 
